--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: start;
-    width: 60%;
+    width: 100%;
     height: 100vh;
 
 }
@@ -44,7 +44,7 @@ body{
     align-items: center;
     justify-content: space-around; /* vertical */
     flex-direction: column;        /* horizontal */
-    width: 1000%;
+    width: 100%;
     min-height: 34rem;
 }
 
@@ -133,4 +133,32 @@ body{
 
 .app-download:nth-child(2){
     background-image: url('./img/googleplay-button.png');
+}
+
+/* media queries */
+
+@media ( max-width: 1024px) {
+    .instagram-wrapper{
+        max-width: 100%;
+    }
+
+}
+
+@media (max-width: 650px) {
+    body {
+        background-color: #ffff;
+    }
+
+    .instagram-phone {
+        display: none;
+    }
+
+    .instagram-continue {
+        width: 100%;
+    }
+
+    .group{
+        border: 1px solid transparent;
+    }
+
 }
